# projects-314

./: DNA_Random_Sample_1.txt  DNA_Random_Sample_2.txt  Generative_AI.py  RNG_sorting.py  assignment1.py  data_structures.py  file_handling.py  genome_sequencer.py  gui.py  test_GUI.py
genome_sequencer1.5/: DNA_Random_Sample_3.txt  LICENSE  README.txt  genome_sequencer.py  pyproject.toml
genome_sequencer1.5/src/genome_sequencer1.5/: genome_sequencer.py
genome_sequencer1.5/src/genome_sequencer1.5.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
genome_sequencer2.0/: genome_sequencer.py  genome_tk.py
hwgs/: README.txt  pyproject.toml
hwgs/src/hwgs/: genome_sequencer.py
hwgs/src/hwgs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
